fix global.css for using tailwind classes and scrollbar styles

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,4 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  background-color: #2a2a2a;
+}
 
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #cbd5e1;
+  border-radius: 10px;
+  transition: all 0.3s ease;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #94a3b8;
+}
